@@ -32,9 +32,11 @@ var SimpleCCMOptions =
 
     /**
      * Production mode - disables some checks without compomising security
-     * @default
+     * @default NODE_ENV === 'production'
      */
-    prodMode : false,
+    prodMode :
+        ( typeof process === 'object' ) &&
+        ( process.env.NODE_ENV === 'production' ),
 
     /**
      * Communication configuration callback( type, specific-args )
