@@ -1,6 +1,7 @@
 
 === (next) ===
 FIXED: minor fixes & improvements to unit tests
+CHANGED: to auto-enabled CCM prodMode, if NODE_ENV=production
 NEW: FTN3 v1.7 custom result types
 
 === 1.2.2 (2017-08-06) ===
